edited widget.html iframe to include the get parameter

--- a/widget.html
+++ b/widget.html
@@ -272,7 +272,7 @@
 		  <!-- Start of widget-->
           <div class="col-lg-9 container-fluid widget-container" style="background:#eee;height:{{containerHeight}}px">
             <br/>
-			<iframe style='height:{{widgetOptions.widgetHeight}}px; width:{{widgetOptions.widgetWidth}}px;margin:5px' frameborder="0" scrolling="no" src="cart.php"></iframe>
+			<iframe style='height:{{widgetOptions.widgetHeight}}px; width:{{widgetOptions.widgetWidth}}px;margin:5px' frameborder="0" scrolling="no" src="cart.php?u=benjamin"></iframe>
           </div>
 		  
 		  
