--- a/widget.html
+++ b/widget.html
@@ -232,7 +232,7 @@
 			<div class="panel-heading code-snippet-text">Code Snippet: Paste the below to the HTML file you wish to put your POPCart</div>
 			  <div class="panel-body ">
 					<code>
-					&lt;iframe style='height:{{widgetOptions.widgetHeight}}px; width:{{widgetOptions.widgetWidth}}px; margin:5px' frameborder="0" scrolling="no" src="cart.php"&gt;&lt;/iframe&gt;
+					&lt;iframe style='height:{{widgetOptions.widgetHeight}}px; width:{{widgetOptions.widgetWidth}}px; margin:5px' frameborder="0" scrolling="no" src="https://popcart.herokuapp.com/cart.php?benjamin"&gt;&lt;/iframe&gt;
 					</code>
 			  </div>
 			</div>
