Logged Transactions and showed a ending page

--- a/testing.html
+++ b/testing.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<script src="https://popcart.herokuapp.com/js/client/popcart.js"></script>
+	<script src="js/client/popcart.js"></script>
 </head>
 	<body>
 		<div id="popcart" ng-app="cartApp" data-s="benjamin">
