--- a/testing.html
+++ b/testing.html
@@ -3,7 +3,7 @@
 	<script src="js/client/popcart.js"></script>
 </head>
 	<body>
-		<div id="popcart" ng-app="cartApp" data-s="benjamin">
+		<div id="popcart" ng-app="cartApp" data-s="Law">
 			<div id="popcartCtrl" ng-controller="WidgetCtrl">
 			</div>
 		</div>
