--- a/products.html
+++ b/products.html
@@ -302,7 +302,7 @@
             <input type="file" name="fileToUpload" id="fileToUpload">
             <br/>
             <br/>
-			<input type="hidden" name="username" ng-model=""/>
+			<input type="hidden" name="username" ng-model="user"/>
             <div class="form-group">
               <label for="name">Product Name</label>
               <input class="form-control" name="productName" id="name" ng-model="productName" type="text" required/>
