Used Directives instead

--- a/testing.html
+++ b/testing.html
@@ -5,6 +5,7 @@
 	<body>
 		<div id="popcart" ng-app="cartApp" data-s="Law">
 			<div id="popcartCtrl" ng-controller="WidgetCtrl">
+				<pop-here></pop-here>
 			</div>
 		</div>
 	</body>
