--- a/widget.html
+++ b/widget.html
@@ -34,9 +34,10 @@
     var widgetApp = angular.module('widgetApp', ['firebase']);
     widgetApp.controller('WidgetCtrl', ['$scope', '$firebase',
       function($scope, $firebase) {
-	  
-		  var widgetRef=new Firebase("https://popcart.firebaseio.com/widgets/benjamin");
-			
+		$.post( "scripts/userLoggedIn.php", function( data ) {
+			$scope.user=data;
+			var widgetRef=new Firebase("https://popcart.firebaseio.com/widgets/"+$scope.user);
+			$scope.widgetURL='cart.php?u='+$scope.user;
 			//Load options
 		var widgetOptions=$firebase(widgetRef).$asObject();
 		widgetOptions.$bindTo($scope, "widgetOptions");
@@ -57,10 +58,10 @@
 		});
         $scope.widgetHeader = "block";
 
-        var ref = new Firebase("https://popcart.firebaseio.com/products/benjamin");
+        var ref = new Firebase("https://popcart.firebaseio.com/products/"+$scope.user);
         $scope.products = $firebase(ref).$asArray();
-		
-		
+			});
+	
       }
     ]);
   </script>
@@ -232,7 +233,7 @@
 			<div class="panel-heading code-snippet-text">Code Snippet: Paste the below to the HTML file you wish to put your POPCart</div>
 			  <div class="panel-body ">
 					<code>
-					&lt;iframe style='height:{{widgetOptions.widgetHeight}}px; width:{{widgetOptions.widgetWidth}}px; margin:5px' frameborder="0" scrolling="no" src="https://popcart.herokuapp.com/cart.php?benjamin"&gt;&lt;/iframe&gt;
+					&lt;iframe style='height:{{widgetOptions.widgetHeight}}px; width:{{widgetOptions.widgetWidth}}px; margin:5px' frameborder="0" scrolling="no" src="https://popcart.herokuapp.com/cart.php?u={{user}}"&gt;&lt;/iframe&gt;
 					</code>
 			  </div>
 			</div>
@@ -272,7 +273,7 @@
 		  <!-- Start of widget-->
           <div class="col-lg-9 container-fluid widget-container" style="background:#eee;height:{{containerHeight}}px">
             <br/>
-			<iframe style='height:{{widgetOptions.widgetHeight}}px; width:{{widgetOptions.widgetWidth}}px;margin:5px' frameborder="0" scrolling="no" src="cart.php?u=benjamin"></iframe>
+			<iframe style='height:{{widgetOptions.widgetHeight}}px; width:{{widgetOptions.widgetWidth}}px;margin:5px' frameborder="0" scrolling="no" ng-src="{{widgetURL}}"></iframe>
           </div>
 		  
 		  
