--- a/widget.html
+++ b/widget.html
@@ -31,11 +31,22 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
   <script>
+  
+  function getCookie(cname) {
+    var name = cname + "=";
+    var ca = document.cookie.split(';');
+    for(var i=0; i<ca.length; i++) {
+        var c = ca[i];
+        while (c.charAt(0)==' ') c = c.substring(1);
+        if (c.indexOf(name) == 0) return c.substring(name.length,c.length);
+    }
+    return "";
+}
     var widgetApp = angular.module('widgetApp', ['firebase']);
     widgetApp.controller('WidgetCtrl', ['$scope', '$firebase',
       function($scope, $firebase) {
-		$.post( "scripts/userLoggedIn.php", function( data ) {
-			$scope.user=data;
+		
+			$scope.user=getCookie('username');
 			var widgetRef=new Firebase("https://popcart.firebaseio.com/widgets/"+$scope.user);
 			$scope.widgetURL='cart.php?u='+$scope.user;
 			//Load options
@@ -51,6 +62,10 @@
 			$scope.widgetHeight=snapshot.val().widgetHeight;
 			$scope.widgetWidth=snapshot.val().widgetWidth;
 		});*/
+		
+		$scope.hideCode=function(){
+			$("#code-snippet").slideToggle();
+		};
 
 		widgetRef.on("value",function(snapshot){
 			$scope.containerHeight=parseInt(snapshot.val().widgetHeight)+50;
@@ -60,7 +75,7 @@
 
         var ref = new Firebase("https://popcart.firebaseio.com/products/"+$scope.user);
         $scope.products = $firebase(ref).$asArray();
-			});
+			
 	
       }
     ]);
@@ -230,11 +245,23 @@
 		<div class="row">
 		<div class="col-lg-12">
 			<div class="panel panel-primary">
-			<div class="panel-heading code-snippet-text">Code Snippet: Paste the below to the HTML file you wish to put your POPCart</div>
-			  <div class="panel-body ">
-					<code>
-					&lt;iframe style='height:{{widgetOptions.widgetHeight}}px; width:{{widgetOptions.widgetWidth}}px; margin:5px' frameborder="0" scrolling="no" src="https://popcart.herokuapp.com/cart.php?u={{user}}"&gt;&lt;/iframe&gt;
-					</code>
+			<div class="panel-heading code-snippet-text">
+			
+			Code Snippet: Paste the below to the HTML file within the <u><strong>&lt;body&gt;</strong></u> tag
+			
+			<button type="button" class="btn btn-group-sm btn-primary" ng-click="hideCode()"> <span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></button>
+			
+			</div>
+			  <div class="panel-body" id="code-snippet">
+			  <code>
+&lt;script src=&quot;https://popcart.herokuapp.com/js/client/popcart.js&quot;&gt;&lt;/script&gt;
+		&lt;div id=&quot;popcart&quot; ng-app=&quot;cartApp&quot; data-s=&quot;{{user}}&quot;&gt;
+			&lt;div id=&quot;popcartCtrl&quot; ng-controller=&quot;WidgetCtrl&quot;&gt;
+				&lt;pop-here&gt;&lt;/pop-here&gt;
+			&lt;/div&gt;
+		&lt;/div&gt;
+		</code>
+		
 			  </div>
 			</div>
 		</div>
