--- a/products.html
+++ b/products.html
@@ -66,7 +66,7 @@ function deleteCookie(){
 	
        		$scope.logout=function(){
 			deleteCookie();
-			window.replace("index.php");
+			window.location.replace("index.php");
 		};
 
         /*$scope.addItem=function(){
