Modified Home to look good

--- a/widget.html
+++ b/widget.html
@@ -103,7 +103,7 @@ function deleteCookie(){
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">POP-Cart Admin</a>
+        <a class="navbar-brand" href="home.php">POP-Cart Admin</a>
       </div>
       <!-- Top Menu Items -->
       <ul class="nav navbar-right top-nav">
@@ -213,7 +213,7 @@ function deleteCookie(){
       <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav side-nav">
           <li>
-            <a href="index.html"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
+            <a href="home.php"><i class="fa fa-fw fa-dashboard"></i> Home</a>
           </li>
 
           <li>
@@ -240,7 +240,7 @@ function deleteCookie(){
                         </h1>
             <ol class="breadcrumb">
               <li>
-                <i class="fa fa-dashboard"></i>  <a href="index.html">Dashboard</a>
+                <i class="fa fa-dashboard"></i>  <a href="home.php">Home</a>
               </li>
               <li class="active">
                 <i class="fa fa-file"></i> Widget Management
@@ -254,10 +254,9 @@ function deleteCookie(){
 			<div class="panel panel-primary">
 			<div class="panel-heading code-snippet-text">
 			
-			Code Snippet: Paste the below to the HTML file within the <u><strong>&lt;body&gt;</strong></u> tag
+			Code Snippet: Paste the below to the HTML file within the <u><strong>&lt;body&gt;</strong></u> tag.
 			
 			<button type="button" class="btn btn-group-sm btn-primary" ng-click="hideCode()"> <span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></button>
-			
 			</div>
 			  <div class="panel-body" id="code-snippet">
 			  <code>
@@ -267,8 +266,8 @@ function deleteCookie(){
 				&lt;pop-here&gt;&lt;/pop-here&gt;
 			&lt;/div&gt;
 		&lt;/div&gt;
-		</code>
-		
+		</code><br/>
+		Don't have a HTML file yet? Try this <a href="http://www.w3schools.com/html/tryit.asp?filename=tryhtml_default" target="_blank">HTML editor</a> and paste the snippet on the left panel and click "See Result".<br/><i style="color:red;">*Remember to enclose them in between <strong>&lt;body&gt;</strong> and <strong>&lt;/body&gt;</strong></i>
 			  </div>
 			</div>
 		</div>
