--- a/products.html
+++ b/products.html
@@ -104,7 +104,7 @@ function deleteCookie(){
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">POP-Cart Admin</a>
+        <a class="navbar-brand" href="home.php">POP-Cart Admin</a>
       </div>
       <!-- Top Menu Items -->
       <ul class="nav navbar-right top-nav">
@@ -211,7 +211,7 @@ function deleteCookie(){
       <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav side-nav">
           <li>
-            <a href="index.html"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
+            <a href="home.php"><i class="fa fa-fw fa-dashboard"></i> Home</a>
           </li>
           <li>
             <a href="products.html"><i class="fa fa-fw fa-shopping-cart"></i> Products</a>
@@ -236,7 +236,7 @@ function deleteCookie(){
                         </h1>
             <ol class="breadcrumb">
               <li>
-                <i class="fa fa-dashboard"></i>  <a href="index.html">Dashboard</a>
+                <i class="fa fa-dashboard"></i>  <a href="home.php">Home</a>
               </li>
               <li class="active">
                 <i class="fa fa-table"></i> Products
