--- a/products.html
+++ b/products.html
@@ -127,7 +127,7 @@ function deleteCookie(){
                                         <!--<img class="media-object" src="http://placehold.it/50x50" alt="">-->
                                     </span>
                   <div class="media-body">
-                    <h5 class="media-heading"><strong>John Smith</strong>
+                    <h5 class="media-heading"><strong></strong>
                                         </h5>
                     <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
                     <p>Lorem ipsum dolor sit amet, consectetur...</p>
@@ -142,7 +142,7 @@ function deleteCookie(){
                                         <!--<img class="media-object" src="http://placehold.it/50x50" alt="">-->
                                     </span>
                   <div class="media-body">
-                    <h5 class="media-heading"><strong>John Smith</strong>
+                    <h5 class="media-heading"><strong></strong>
                                         </h5>
                     <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
                     <p>Lorem ipsum dolor sit amet, consectetur...</p>
@@ -157,7 +157,7 @@ function deleteCookie(){
                                        <!-- <img class="media-object" src="https://placehold.it/50x50" alt="">-->
                                     </span>
                   <div class="media-body">
-                    <h5 class="media-heading"><strong>John Smith</strong>
+                    <h5 class="media-heading"><strong></strong>
                                         </h5>
                     <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
                     <p>Lorem ipsum dolor sit amet, consectetur...</p>
@@ -198,7 +198,7 @@ function deleteCookie(){
           </ul>
         </li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> John Smith <b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i>  <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li>
               <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
@@ -227,6 +227,9 @@ function deleteCookie(){
           </li>
           <li>
             <a href="widget.html"><i class="fa fa-fw fa-gears"></i>Widget Management</a>
+          </li>
+		  	<li>
+            <a href="feedback.html"><i class="fa fa-fw fa-gears"></i>Feedback</a>
           </li>
         </ul>
       </div>
