--- a/widget.html
+++ b/widget.html
@@ -129,7 +129,7 @@ function deleteCookie(){
                                     </span>
                   <div class="media-body">
                     <h5 class="media-heading">
-                                            <strong>John Smith</strong>
+                                            <strong></strong>
                                         </h5>
                     <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
                     <p>Lorem ipsum dolor sit amet, consectetur...</p>
@@ -145,7 +145,7 @@ function deleteCookie(){
                                     </span>
                   <div class="media-body">
                     <h5 class="media-heading">
-                                            <strong>John Smith</strong>
+                                            <strong></strong>
                                         </h5>
                     <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
                     <p>Lorem ipsum dolor sit amet, consectetur...</p>
@@ -161,7 +161,7 @@ function deleteCookie(){
                                     </span>
                   <div class="media-body">
                     <h5 class="media-heading">
-                                            <strong>John Smith</strong>
+                                            <strong></strong>
                                         </h5>
                     <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
                     <p>Lorem ipsum dolor sit amet, consectetur...</p>
@@ -202,7 +202,7 @@ function deleteCookie(){
           </ul>
         </li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> John Smith <b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i>  <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li>
               <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
@@ -232,6 +232,9 @@ function deleteCookie(){
           </li>
           <li>
             <a href="widget.html"><i class="fa fa-fw fa-gears"></i>Widget Management</a>
+          </li>
+		  		  <li>
+            <a href="feedback.html"><i class="fa fa-fw fa-gears"></i>Feedback</a>
           </li>
         </ul>
       </div>
