--- a/products.html
+++ b/products.html
@@ -117,99 +117,10 @@ function deleteCookie(){
       </div>
       <!-- Top Menu Items -->
       <ul class="nav navbar-right top-nav">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope"></i> <b class="caret"></b></a>
-          <ul class="dropdown-menu message-dropdown">
-            <li class="message-preview">
-              <a href="#">
-                <div class="media">
-                  <span class="pull-left">
-                                        <!--<img class="media-object" src="http://placehold.it/50x50" alt="">-->
-                                    </span>
-                  <div class="media-body">
-                    <h5 class="media-heading"><strong></strong>
-                                        </h5>
-                    <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
-                  </div>
-                </div>
-              </a>
-            </li>
-            <li class="message-preview">
-              <a href="#">
-                <div class="media">
-                  <span class="pull-left">
-                                        <!--<img class="media-object" src="http://placehold.it/50x50" alt="">-->
-                                    </span>
-                  <div class="media-body">
-                    <h5 class="media-heading"><strong></strong>
-                                        </h5>
-                    <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
-                  </div>
-                </div>
-              </a>
-            </li>
-            <li class="message-preview">
-              <a href="#">
-                <div class="media">
-                  <span class="pull-left">
-                                       <!-- <img class="media-object" src="https://placehold.it/50x50" alt="">-->
-                                    </span>
-                  <div class="media-body">
-                    <h5 class="media-heading"><strong></strong>
-                                        </h5>
-                    <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
-                  </div>
-                </div>
-              </a>
-            </li>
-            <li class="message-footer">
-              <a href="#">Read All New Messages</a>
-            </li>
-          </ul>
-        </li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i> <b class="caret"></b></a>
-          <ul class="dropdown-menu alert-dropdown">
-            <li>
-              <a href="#">Alert Name <span class="label label-default">Alert Badge</span></a>
-            </li>
-            <li>
-              <a href="#">Alert Name <span class="label label-primary">Alert Badge</span></a>
-            </li>
-            <li>
-              <a href="#">Alert Name <span class="label label-success">Alert Badge</span></a>
-            </li>
-            <li>
-              <a href="#">Alert Name <span class="label label-info">Alert Badge</span></a>
-            </li>
-            <li>
-              <a href="#">Alert Name <span class="label label-warning">Alert Badge</span></a>
-            </li>
-            <li>
-              <a href="#">Alert Name <span class="label label-danger">Alert Badge</span></a>
-            </li>
-            <li class="divider"></li>
-            <li>
-              <a href="#">View All</a>
-            </li>
-          </ul>
-        </li>
+      
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i>  <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li>
-              <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
-            </li>
-            <li>
-              <a href="#"><i class="fa fa-fw fa-envelope"></i> Inbox</a>
-            </li>
-            <li>
-              <a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a>
-            </li>
-            <li class="divider"></li>
             <li>
               <a href="#" ng-click="logout()"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
             </li>
@@ -259,9 +170,7 @@ function deleteCookie(){
         <!-- /.row -->
 
         <div class="row" ng-controller="ProductCtrl">
-
-
-          <h2>Products</h2>
+		<div class="col-lg-12">
           <br/>
           <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
             Add New Product
@@ -299,7 +208,7 @@ function deleteCookie(){
               </tbody>
             </table>
           </div>
-
+			</div>
         </div>
         <!-- /.row -->
 
