Changed feedback message

--- a/feedback.html
+++ b/feedback.html
@@ -97,7 +97,7 @@
 						<div class="col-lg-12">
 						
 							  <div class="alert alert-success" >
-									The Singapore Government has launched a scheme where they will pay university students and recent graduates to work for local SaaS companies for up to 1 year. In addition to this government-funded subsidy, we are authorized to pay you an incentive bonus plan based on your ability to facilitate the growth of our SaaS business.<br/>
+									The Singapore Government has launched a scheme where they will pay students and recent graduates to work for local SaaS companies for 1 year. In addition to the government-funded subsidy, we are authorized to pay you an incentive bonus based on your ability to facilitate the growth of our SaaS business. Our company's bonus plan will award you the full amount of all recurring revenue that you personally help to facilitate. We will continue to award you all recurring revenue for 1 year after you leave the company. Please watch our short onboarding video to get an understanding of our service. <br/>
 									
 									Also, please visit awesome applications from: <br/>
 									<ul>
