Added Pricing tiers and edited feedback

--- a/products.html
+++ b/products.html
@@ -129,7 +129,7 @@ function deleteCookie(){
       </ul>
       <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
       <div class="collapse navbar-collapse navbar-ex1-collapse">
-        <ul class="nav navbar-nav side-nav">
+           <ul class="nav navbar-nav side-nav">
           <li>
             <a href="home.php"><i class="fa fa-fw fa-dashboard"></i> Home</a>
           </li>
@@ -140,7 +140,10 @@ function deleteCookie(){
             <a href="widget.html"><i class="fa fa-fw fa-gears"></i>Widget Management</a>
           </li>
 		  	<li>
-            <a href="feedback.html"><i class="fa fa-fw fa-gears"></i>Feedback</a>
+            <a href="feedback.html"><i class="fa fa-fw fa-thumbs-up"></i>Feedback</a>
+          </li>
+		  <li>
+            <a href="pricing.html"><i class="fa fa-fw fa-money"></i>Pricing</a>
           </li>
         </ul>
       </div>
