--- a/feedback.html
+++ b/feedback.html
@@ -60,7 +60,7 @@
             </ul>
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
       <div class="collapse navbar-collapse navbar-ex1-collapse">
-        <ul class="nav navbar-nav side-nav">
+            <ul class="nav navbar-nav side-nav">
           <li>
             <a href="home.php"><i class="fa fa-fw fa-dashboard"></i> Home</a>
           </li>
@@ -70,8 +70,11 @@
           <li>
             <a href="widget.html"><i class="fa fa-fw fa-gears"></i>Widget Management</a>
           </li>
+		  	<li>
+            <a href="feedback.html"><i class="fa fa-fw fa-thumbs-up"></i>Feedback</a>
+          </li>
 		  <li>
-            <a href="feedback.html"><i class="fa fa-fw fa-gears"></i>Feedback</a>
+            <a href="pricing.html"><i class="fa fa-fw fa-money"></i>Pricing</a>
           </li>
         </ul>
       </div>
@@ -123,6 +126,23 @@
 					  <input type="text" class="form-control" id="fname" >
 					</div>
 				  </div>
+
+				  <div class="form-group">
+					<div class="col-sm-4">
+					<b>SMU-Email</b><br/>
+					  <input type="text" class="form-control" id="email" >
+					</div>
+				  </div>
+				  
+				  <div class="form-group">
+					<div class="col-sm-4">
+					<b>Did you manage to see your cart on a HTML page?</b><br/>
+					  <select id="deployed">
+						<option value="Y">Yes</option>
+						<option value="N">No</option>
+					  </select>
+					</div>
+				  </div>
 				  
 					<b>What we should start doing</b>
 					<textarea id="startFb" class="form-control" rows="2"></textarea><br/>
@@ -158,10 +178,10 @@
 					<div class="row">
 					<div class="col-lg-12">
 						<table class="table table-bordered">
-						  <tr><th>User</th><th>Full Name</th><th>Start</th><th>Stop</th><th>Continue</th><th>Home Page</th><th>Product Management</th><th>Widget Management</th></tr>
+						  <tr><th>User</th><th>Deployed?</th><th>Start</th><th>Stop</th><th>Continue</th><th>Home Page</th><th>Product Management</th><th>Widget Management</th></tr>
 						  <tr ng-repeat="fb in feedbackList" >
 						  <td>{{fb.user}}</td>
-						  <td>{{fb.fname}}</td>
+						  <td>{{fb.deployed}}</td>
 						  <td>{{fb.startFb}}</td>
 						  <td>{{fb.stopFb}}</td>
 						  <td>{{fb.continueFb}}</td>
@@ -211,7 +231,7 @@ function deleteCookie(){
 			var user=getCookie('username');
 			//get feedback values
 			//construct json object
-			var item={user:user,fname:$("#fname").val(),startFb:$("#startFb").val(),stopFb:$("#stopFb").val(),continueFb:$("#continueFb").val(),homeFb:$("#homeFb").val(),productFb:$("#productFb").val(),widgetFb:$("#widgetFb").val()};
+			var item={user:user,fname:$("#fname").val(),deployed:$( "#deployed option:selected").text(),email:$("#email").val(),startFb:$("#startFb").val(),stopFb:$("#stopFb").val(),continueFb:$("#continueFb").val(),homeFb:$("#homeFb").val(),productFb:$("#productFb").val(),widgetFb:$("#widgetFb").val()};
 			$scope.feedbackList.$add(item);
 			alert("Thanks for your feedback");
 		}
