Updated to include team 18 feedback

--- a/feedback.html
+++ b/feedback.html
@@ -104,7 +104,7 @@
 									
 									Also, please visit awesome applications from: <br/>
 									<ul>
-									<li><a href="">Team 18</a></li>
+									<li><a href="https://errandrunner.herokuapp.com/feedback.html">Team 18</a></li>
 									<li><a href="">Team 20</a></li> 
 									</ul>
 									
