--- a/feedback.html
+++ b/feedback.html
@@ -105,7 +105,7 @@
 									Also, please visit awesome applications from: <br/>
 									<ul>
 									<li><a href="https://errandrunner.herokuapp.com/feedback.html">Team 18</a></li>
-									<li><a href="">Team 20</a></li> 
+									<li><a href="http://goffeeappfeedback.herokuapp.com/">Team 20</a></li> 
 									</ul>
 									
 							  </div>
