--- a/widget.html
+++ b/widget.html
@@ -46,9 +46,15 @@
 function deleteCookie(){
 	document.cookie = "username=; expires=Thu, 01 Jan 1970 00:00:00 UTC";
 }
+
+
     var widgetApp = angular.module('widgetApp', ['firebase']);
     widgetApp.controller('WidgetCtrl', ['$scope', '$firebase',
       function($scope, $firebase) {
+		if(getCookie("username")==""){
+			window.location.replace("index.php");
+		}
+
 			$scope.user=getCookie('username');
 			console.log($scope.user);
 			var widgetRef=new Firebase("https://popcart.firebaseio.com/widgets/"+$scope.user);
@@ -265,9 +271,11 @@ function deleteCookie(){
           </div>
         </div>
         <!-- /.row -->
+		
 		<div class="row">
 		<div class="col-lg-12">
 			<div class="panel panel-primary">
+			
 			<div class="panel-heading code-snippet-text">
 			
 			Code Snippet: Paste the below to the HTML file within the <u><strong>&lt;body&gt;</strong></u> tag.
@@ -288,6 +296,7 @@ function deleteCookie(){
 			</div>
 		</div>
 		</div>
+		<div class="alert alert-info alert-dismissible" role="alert"><button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button><span class="glyphicon glyphicon-info-sign"></span>   Adjust the look and feel of your POPKart on your website below by changing the length and height of the widget on the textboxes on the left hand side</div>
         <div class="row" >
           <div class="col-lg-2">
             <form>
