--- a/landing/index.html
+++ b/landing/index.html
@@ -30,7 +30,16 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-59574467-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 
 <body id="page-top" class="index">
@@ -65,6 +74,9 @@
                     <li>
                         <a class="page-scroll" href="#team">Team</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="http://www.indiegogo.com/projects/1208954/fblk">IndieGOGO</a>
+                    </li>
 					<li>
                         <a class="page-scroll" href="../index.php">Try POP-Cart Now!</a>
                     </li>
@@ -87,7 +99,7 @@
     </header>
 
     <!-- Services Section -->
-    <section id="services">
+    <section id="services" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
