--- a/landing/index.html
+++ b/landing/index.html
@@ -138,6 +138,13 @@
 
 	
 	<section id="pricing">
+	 <div class="container">
+	 <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Pricing</h2>
+                    <h3 class="section-subheading text-muted">Subscription Plans</h3>
+                </div>
+            </div>
 		  <div class="row">
 
         <div class="col-sm-3">
@@ -238,6 +245,7 @@
         </div>
 
     </div>
+	 </div>
 	</section>
    
 
