--- a/landing/index.html
+++ b/landing/index.html
@@ -67,7 +67,9 @@
                     <li>
                         <a class="page-scroll" href="#services">Services</a>
                     </li>
-                    
+                     <li>
+                        <a class="page-scroll" href="#pricing">Pricing</a>
+                    </li>
                     <li>
                         <a class="page-scroll" href="#about">About</a>
                     </li>
